# HPCSE_ex6

./: .gitignore  CMakeLists.txt  ispc.cmake  load_modules.bash  m4generate.cmake  main.cpp
include/: cuda_potential.hpp  cuda_vector.hpp  cude_vector.hpp  e2p.h  p2e.h  p2p.h  particles.h
src/: cuda_kernels.cuh.m4  cuda_potential.cu  e2p.ispc.m4  p2e.ispc.m4  p2p.ispc  particles.cpp  unroll.m4
